docs: 2026 backend roadmap overhaul — prioritized guide + detailed syllabus; remove RESEARCH.md; drop 17_final_notes; add 18_learning_timeline
Co-authored-by: Cursor <cursoragent@cursor.com>